@@ -35,27 +35,26 @@ class ContentViewArticle extends JViewLegacy
 		$userId		= $user->get('id');
 		$dispatcher	= JEventDispatcher::getInstance();
 
-		$this->item  = $this->get('Item');
-		$this->print = $app->input->getBool('print');
-		$this->state = $this->get('State');
-		$this->user  = $user;
+		$this->item		= $this->get('Item');
+		$this->print	= $app->input->getBool('print');
+		$this->state	= $this->get('State');
+		$this->user		= $user;
 
 		// Check for errors.
 		if (count($errors = $this->get('Errors')))
 		{
 			JError::raiseWarning(500, implode("\n", $errors));
-
 			return false;
 		}
 
 		// Create a shortcut for $item.
 		$item = $this->item;
-		$item->tagLayout      = new JLayoutFile('joomla.content.tags');
+		$item->tagLayout = new JLayoutFile('joomla.content.tags');
 
 		// Add router helpers.
 		$item->slug			= $item->alias ? ($item->id.':'.$item->alias) : $item->id;
 		$item->catslug		= $item->category_alias ? ($item->catid.':'.$item->category_alias) : $item->catid;
-		$item->parent_slug = $item->parent_alias ? ($item->parent_id . ':' . $item->parent_alias) : $item->parent_id;
+		$item->parent_slug	= $item->parent_alias ? ($item->parent_id . ':' . $item->parent_alias) : $item->parent_id;
 
 		// No link for ROOT category
 		if ($item->parent_alias == 'root')
@@ -68,27 +67,35 @@ class ContentViewArticle extends JViewLegacy
 
 		// Merge article params. If this is single-article view, menu params override article params
 		// Otherwise, article params override menu item params
-		$this->params	= $this->state->get('params');
-		$active	= $app->getMenu()->getActive();
-		$temp	= clone ($this->params);
+		$this->params = $this->state->get('params');
+		$active = $app->getMenu()->getActive();
+		$temp = clone ($this->params);
 
 		// Check to see which parameters should take priority
 		if ($active)
 		{
 			$currentLink = $active->link;
+
 			// If the current view is the active item and an article view for this article, then the menu item params take priority
 			if (strpos($currentLink, 'view=article') && (strpos($currentLink, '&id='.(string) $item->id)))
 			{
-				// $item->params are the article params, $temp are the menu item params
-				// Merge so that the menu item params take priority
-				$item->params->merge($temp);
 				// Load layout from active query (in case it is an alternative menu item)
 				if (isset($active->query['layout']))
 				{
 					$this->setLayout($active->query['layout']);
 				}
+				// Check for alternative layout of article
+				else if ($layout = $item->params->get('article_layout'))
+				{
+					$this->setLayout($layout);
+				}
+
+				// $item->params are the article params, $temp are the menu item params
+				// Merge so that the menu item params take priority
+				$item->params->merge($temp);
 			}
-			else {
+			else
+			{
 				// Current view is not a single article, so the article params take priority here
 				// Merge the menu item params with the article params so that the article params take priority
 				$temp->merge($item->params);
@@ -107,6 +114,7 @@ class ContentViewArticle extends JViewLegacy
 			// Merge so that article params take priority
 			$temp->merge($item->params);
 			$item->params = $temp;
+
 			// Check for alternative layouts (since we are not in a single-article menu item)
 			// Single-article menu item layout takes priority over alt layout for an article
 			if ($layout = $item->params->get('article_layout'))
@@ -118,11 +126,10 @@ class ContentViewArticle extends JViewLegacy
 		$offset = $this->state->get('list.offset');
 
 		// Check the view access to the article (the model has already computed the values).
-		if ($item->params->get('access-view') != true && (($item->params->get('show_noauth') != true &&  $user->get('guest') ))) {
-
-						JError::raiseWarning(403, JText::_('JERROR_ALERTNOAUTHOR'));
-
-				return;
+		if ($item->params->get('access-view') != true && (($item->params->get('show_noauth') != true &&  $user->get('guest') )))
+		{
+			JError::raiseWarning(403, JText::_('JERROR_ALERTNOAUTHOR'));
+			return;
 		}
 
 		if ($item->params->get('show_intro', '1') == '1')
@@ -133,9 +140,11 @@ class ContentViewArticle extends JViewLegacy
 		{
 			$item->text = $item->fulltext;
 		}
-		else  {
+		else
+		{
 			$item->text = $item->introtext;
 		}
+
 		$item->tags = new JHelperTags;
 		$item->tags->getItemTags('com_content.article', $this->item->id);
 
@@ -174,14 +183,15 @@ class ContentViewArticle extends JViewLegacy
 	 */
 	protected function _prepareDocument()
 	{
-		$app	= JFactory::getApplication();
-		$menus	= $app->getMenu();
-		$pathway = $app->getPathway();
-		$title = null;
+		$app		= JFactory::getApplication();
+		$menus		= $app->getMenu();
+		$pathway	= $app->getPathway();
+		$title		= null;
 
 		// Because the application sets a default page title,
 		// we need to get it from the menu item itself
 		$menu = $menus->getActive();
+
 		if ($menu)
 		{
 			$this->params->def('page_heading', $this->params->get('page_title', $menu->title));
@@ -205,12 +215,14 @@ class ContentViewArticle extends JViewLegacy
 			}
 			$path = array(array('title' => $this->item->title, 'link' => ''));
 			$category = JCategories::getInstance('Content')->get($this->item->catid);
+
 			while ($category && ($menu->query['option'] != 'com_content' || $menu->query['view'] == 'article' || $id != $category->id) && $category->id > 1)
 			{
 				$path[] = array('title' => $category->title, 'link' => ContentHelperRoute::getCategoryRoute($category->id));
 				$category = $category->getParent();
 			}
 			$path = array_reverse($path);
+
 			foreach ($path as $item)
 			{
 				$pathway->addItem($item['title'], $item['link']);
@@ -230,6 +242,7 @@ class ContentViewArticle extends JViewLegacy
 		{
 			$title = JText::sprintf('JPAGETITLE', $title, $app->getCfg('sitename'));
 		}
+
 		if (empty($title))
 		{
 			$title = $this->item->title;
@@ -265,6 +278,7 @@ class ContentViewArticle extends JViewLegacy
 		}
 
 		$mdata = $this->item->metadata->toArray();
+
 		foreach ($mdata as $k => $v)
 		{
 			if ($v)
