@@ -32,6 +32,7 @@ $ -> Language fix or change
  # [#30693] Unclosed span tag in permissions field.  Thanks Dennis Hermatski
  # [#31045] HITS Column Admin Panel.  Thanks David Hurley
  # [#31034] Not colored text as in joomla 2.5 for com_redirect.  Thanks Tobias Zulauf
+ # [#30544] Article Alternative Layout is not applied in Single Article menu item.  Thanks Dennis Hermatski
 
 24-May-2013 Michael Babker
  + [#31004] Add JTwitter package to /libraries/joomla.  Thanks Diana Prajescu
